# LarkEdit

./: .flake8  .gitignore  CMakeLists.txt  README.md  pyproject.toml
examples/: ffmpeg_binding.py
src/larkedit/: __main__.py  app.py  cli.py
src/larkedit/core/: command.py  project.py
src/larkedit/encoding/ffmpeg_binding/: CMakeLists.txt  binding.cpp  common.hpp  compositor.cpp  compositor.hpp  encoder.cpp  encoder.hpp  encoder.pyi  probe.cpp  probe.pyi  thread_queue.hpp
src/larkedit/gui/: editor.py  main_window.py  welcome.py
src/larkedit/gui/widgets/: media_pool.py  preview.py  property_editor.py  timeline.py  track.py
src/larkedit/utils/: media.py
